--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "d3": "^4.4.4",
     "d3-ng2-service": "^1.5.2",
     "jquery": "^3.1.1",
+    "mydatepicker": "^1.6.9",
+    "mydaterangepicker": "^1.3.2",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
